--- a/modules/packing-slips-service/Makefile
+++ b/modules/packing-slips-service/Makefile
@@ -1,4 +1,4 @@
-BINARY_NAME=catalog_service
+BINARY_NAME=packing_slips_service
 BINARY_UNIX=$(BINARY_NAME)_unix
 
 all: test build
@@ -9,8 +9,7 @@ clean:
 	rm -f $(BINARY_NAME)
 	rm -f $(BINARY_UNIX)
 deps:
-	go get github.com/gin-gonic/gin
-	go get -u -v github.com/dgraph-io/dgo
+	go get github.com/streadway/amqp
 
 # Cross compilation
 build-linux: $(BINARY_UNIX)
@@ -18,4 +17,4 @@ build-linux: $(BINARY_UNIX)
 $(BINARY_UNIX):
 	cd src && CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o ../$(BINARY_UNIX) -v
 docker-build: $(BINARY_UNIX)
-	docker build -t catalog-service .
+	docker build -t packing-slips-service .
