First attempt for travis

--- a/modules/orders-service/Makefile
+++ b/modules/orders-service/Makefile
@@ -1,22 +1,26 @@
 BINARY_NAME=orders_service
 BINARY_UNIX=$(BINARY_NAME)_unix
+DOCKER_OWNER=antoineaube
+DOCKER_IMAGE=orders-service
 
-all: test build
-build:
-	cd src && go build -o ../$(BINARY_NAME) -v
+all: clean docker-build
+
+deps:
+	go get -t -v github.com/gin-gonic/gin
+	go get -t -v github.com/streadway/amqp
+	go get -t -v github.com/go-pg/pg
+
 clean:
 	cd src && go clean
 	rm -f $(BINARY_NAME)
 	rm -f $(BINARY_UNIX)
-deps:
-	go get github.com/gin-gonic/gin
-	go get github.com/streadway/amqp
-	go get github.com/go-pg/pg
 
-# Cross compilation
+build:
+	cd src && go build -o ../$(BINARY_NAME) -v
+
 build-linux: $(BINARY_UNIX)
-
 $(BINARY_UNIX):
 	cd src && CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o ../$(BINARY_UNIX) -v
+
 docker-build: $(BINARY_UNIX)
-	docker build -t orders-service .
+	docker build -t $(DOCKER_OWNER)/$(DOCKER_IMAGE) .
