Reorganized all repository

--- a/modules/orders-service/Makefile
+++ b/modules/orders-service/Makefile
@@ -11,16 +11,16 @@ deps:
 	go get -t -v github.com/go-pg/pg
 
 clean:
-	cd src && go clean
+	go clean
 	rm -f $(BINARY_NAME)
 	rm -f $(BINARY_UNIX)
 
 build:
-	cd src && go build -o ../$(BINARY_NAME) -v
+	go build -o $(BINARY_NAME) -v
 
 build-linux: $(BINARY_UNIX)
 $(BINARY_UNIX):
-	cd src && CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o ../$(BINARY_UNIX) -v
+	CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o $(BINARY_UNIX) -v
 
 docker-build: $(BINARY_UNIX)
 	docker build -t $(DOCKER_OWNER)/$(DOCKER_IMAGE) .
