First try deployment to dockerhub

--- a/modules/orders-service/Makefile
+++ b/modules/orders-service/Makefile
@@ -1,7 +1,7 @@
 BINARY_NAME=orders_service
 BINARY_UNIX=$(BINARY_NAME)_unix
 DOCKER_OWNER=antoineaube
-DOCKER_IMAGE=orders-service
+DOCKER_IMAGE=sps-orders-service
 
 all: clean docker-build
 
@@ -24,3 +24,6 @@ $(BINARY_UNIX):
 
 docker-build: $(BINARY_UNIX)
 	docker build -t $(DOCKER_OWNER)/$(DOCKER_IMAGE) .
+
+deploy:
+	docker push $(DOCKER_OWNER)/$(DOCKER_IMAGE)
