--- a/modules/packing-slips-service/Makefile
+++ b/modules/packing-slips-service/Makefile
@@ -1,7 +1,7 @@
 BINARY_NAME=packing_slips_service
 BINARY_UNIX=$(BINARY_NAME)_unix
 DOCKER_OWNER=antoineaube
-DOCKER_IMAGE=packing-slips-service
+DOCKER_IMAGE=sps-packing-slips-service
 
 all: clean docker-build
 
@@ -22,3 +22,6 @@ $(BINARY_UNIX):
 
 docker-build: $(BINARY_UNIX)
 	docker build -t $(DOCKER_OWNER)/$(DOCKER_IMAGE) .
+
+deploy:
+	docker push $(DOCKER_OWNER)/$(DOCKER_IMAGE)
